# firmware_liquids

./: .cproject  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  firmware_liquids Debug_G491.launch
Core/Inc/: AbstractCOM.h  CANCOM.h  Can.h  ECU.h  ECU_Lamarr.h  ECU_uHb.h  FOC.hpp  IOBv4.h  NodeInfos.h  PID.hpp  PMU.h  RCU.h  RCUv2.h  Radio.h  RingBuf.h  Ubx.h
Core/Inc/Channels/: AbstractChannel.h  CANMonitorChannel.h  Data32Channel.h  DigitalOutChannel.h  GenericChannel.h  IMUChannel.h  OverpressureChannel.h  PIControlChannel.h  PressureControlChannel.h  RocketChannel.h  ServoChannel.h  TempChannel.h
Core/Inc/Modules/: ICM2060x_IMU.h  LoRa1261_Radio.h  LoRa1276F30_Radio.h  MAX31865_Temp.h  SAM_M10Q_GNSS.h  SAM_M8Q_GNSS.h  SX1276.h  SX1276_regs.h  TempExt.h  VL53L1X.h  W25Qxx_Flash.h
Core/Inc/Modules/foc/: SimpleFOC.h
Core/Inc/Modules/foc/common/: foc_utils.h
Core/Inc/Modules/foc/sensors/: Encoder.h  GenericSensor.h  HallSensor.h  MagneticSensorAnalog.h
Core/Src/: CANCOM.cpp  Can.cpp  ECU.cpp  ECU_Lamarr.cpp  ECU_uHb.cpp  FOC.cpp  IOBv4.cpp  PID.cpp  PMU.cpp  RCU.cpp  RCUv2.cpp  Radio.cpp  Ubx.cpp  W25Qxx_Flash.cpp  main.cpp  stm32g4xx_it.c  syscalls.c  sysmem.c
Core/Src/Channels/: ADCChannel.cpp  CANMonitorChannel.cpp  Data32Channel.cpp  GenericChannel.cpp  IMUChannel.cpp  OverpressureChannel.cpp  PIControlChannel.cpp  PressureControlChannel.cpp  RocketChannel.cpp  ServoChannel.cpp  TempChannel.cpp
Core/Src/Modules/: LoRa1261_Radio.cpp  LoRa1276F30_Radio.cpp  MAX31865_Temp.cpp  SAM_M10Q_GNSS.cpp  SAM_M8Q_GNSS.cpp  SX1276.cpp  TempExt.cpp  VL53L1X.cpp  W25Qxx_Flash.cpp
Core/Src/Modules/foc/sensors/: Encoder.cpp
Core/Startup/: startup_stm32g431cbtx.s  startup_stm32g474retx.s
Debug_G431_MCB/: firmware_liquids.list  makefile  objects.list  sources.mk
Debug_G431_MCB/Core/Src/: ECU.cyclo  PMU.cyclo  main.cyclo  subdir.mk
Debug_G431_MCB/Core/Src/Channels/: DigitalInChannel.cyclo  PressureControlChannel.cyclo  subdir.mk
Debug_G431_MCB/Core/Src/Modules/: subdir.mk
Debug_G431_MCB/Core/Startup/: subdir.mk
Debug_G431_MCB/Drivers/STM32G431/CMSIS/Core/Template/ARMv8-M/: subdir.mk
Debug_G431_MCB/Drivers/STM32G431/LL_Driver/Src/: stm32g4xx_ll_i2c.cyclo  stm32g4xx_ll_tim.cyclo  subdir.mk
Debug_G431_MCB/Drivers/STM32G431/STRHAL/Src/: STRHAL_ADC.cyclo  STRHAL_SPI.cyclo  STRHAL_TIM.cyclo  STRHAL_UART.cyclo  subdir.mk
Debug_G474_IOBv4/: firmware_liquids.list  objects.list
Debug_G474_IOBv4/Core/Src/: ECU_Lamarr.cyclo  ECU_uHb.cyclo  IOBv4.cyclo  main.cyclo  subdir.mk  syscalls.cyclo
Debug_G474_IOBv4/Core/Src/Channels/: ADCChannel.cyclo  AbstractChannel.cyclo  Data32Channel.cyclo  DigitalOutChannel.cyclo  GenericChannel.cyclo  PyroChannel.cyclo  ServoChannel.cyclo  subdir.mk
Debug_G474_IOBv4/Core/Src/Modules/: subdir.mk
Debug_G474_IOBv4/Core/Startup/: subdir.mk
Debug_G474_IOBv4/Drivers/STM32G474/LL_Driver/Src/: subdir.mk
Debug_G474_IOBv4/Drivers/STM32G474/STRHAL/Src/: STRHAL_CAN.cyclo  STRHAL_SPI.cyclo  STRHAL_UART.cyclo  subdir.mk
Debug_UART_G474_IOBv3/: makefile  objects.list  sources.mk
Debug_UART_G474_IOBv3/Core/Src/: subdir.mk
Debug_UART_G474_IOBv3/Core/Src/Channels/: subdir.mk
Debug_UART_G474_IOBv3/Core/Src/Modules/: subdir.mk
Debug_UART_G474_IOBv3/Core/Startup/: subdir.mk
Drivers/STM32G474/LL_Driver/Inc/: stm32g4xx_ll_adc.h
Drivers/STM32G474/MX_Gen/Inc/: adc.h  cordic.h  main.h  spi.h  tim.h
Drivers/STM32G474/MX_Gen/Src/: adc.c  cordic.c  dma.c  gpio.c  spi.c  tim.cpp
Linker/: STM32G431CBTX_FLASH.ld
